--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 	</head>
 	<body>
 		<p>afafsa</p>
+		<audio controls="controls">
+			<source src="再次.mp3" type="audio/mp3">
+		</audio>
 	</body>
 </html>
