--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -6,8 +6,11 @@
 	</head>
 	<body>
 		<p>afafsa</p>
-		<audio controls="controls">
+		<audio>
 			<source src="再次.mp3" type="audio/mp3">
 		</audio>
+		<video>
+			<source src="1551.mp4" type="video/mp4">
+		</video>
 	</body>
 </html>
