--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -9,8 +9,10 @@
 		<audio>
 			<source src="再次.mp3" type="audio/mp3">
 		</audio>
-		<video>
+		<video controls="controls">
 			<source src="1551.mp4" type="video/mp4">
 		</video>
+		<a href="1551.mp4">mp4</a>
 	</body>
 </html>
+
